chromeos/components/camera_app_ui/resources/css/main.css
/* Copyright 2019 The Chromium Authors. All rights reserved.
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

:root {
  /* Standard CrOS styles */
  --blue-300-rgb: 138, 180, 248;
  --blue-300: rgb(var(--blue-300-rgb));
  --blue-600-dark-rgb: 37, 129, 223;
  --blue-600-dark: rgb(var(--blue-600-rgb));
  --grey-100: rgb(241, 243, 244);
  --grey-200: rgb(232, 234, 237);
  --grey-900: rgb(32, 33, 36);

  --fast1-duration: 100ms;
  --fast2-duration: 200ms;
  --moderate1-duration: 250ms;
  --moderate2-duration: 500ms;
  --slow1-duration: 600ms;
  --slow2-duration: 1000ms;

  --standard-easing: cubic-bezier(0.4, 0, 0.2, 1);
  --enter-easing: cubic-bezier(0, 0, 0.2, 1);
  --exit-easing: cubic-bezier(0.4, 0, 1, 1);

  /* App specific settings */
  --focus-color: rgba(var(--blue-600-dark-rgb), 0.7);
}

html {
  height: 100%;  /* Required for printing. */
}

audio {
  display: none;
}

body {
  --default-font-family: 'Google Sans', sans-serif;

  background: black;
  bottom: 0;
  font-family: var(--default-font-family);
  height: 100%;
  left: 0;
  margin: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
}

button,
input,
label {
  background-color: transparent;
  border-radius: 4px;
  border-style: none;
  margin: 0;
  outline: none;
  padding: 0;
  pointer-events: auto;
  position: relative;
}

input {
  -webkit-appearance: none;
}

body.tab-navigation button:focus::after,
body.tab-navigation input:focus::after {
  --focus-ring-size: 3px;

  border: 2px solid var(--focus-color);
  border-radius: 4px;
  bottom: calc(0px - var(--focus-ring-size));
  content: '';
  left: calc(0px - var(--focus-ring-size));
  position: absolute;
  right: calc(0px - var(--focus-ring-size));
  top: calc(0px - var(--focus-ring-size));
}

.cancel-animate {
  animation: none !important;
  transition: none !important;
}

.circle button,
body.tab-navigation .circle button:focus::after,
body.tab-navigation .circle input:focus::after {
  border-radius: 50%;
}

.buttons {
  align-items: center;
  display: flex;
  justify-content: center;
  pointer-events: none;
}

.buttons button:active,
.buttons input:active {
  transform: scale(1.07);
}

.buttons button,
.buttons input,
.menu-header .icon,
.menu-item .icon {
  background-position: center;
  background-repeat: no-repeat;
  flex-shrink: 0;
  height: 40px;
  width: 40px;
}

::-webkit-scrollbar {
  height: 0;
  width: 0;
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background: transparent;
  height: 0;
  width: 0;
}

.top-stripe {
  position: absolute;
  top: 48px;
  transform: translateY(-50%);
}

.bottom-stripe {
  bottom: var(--bottom-line);
  position: absolute;
  transform: translateY(50%);
}

.left-stripe {
  left:  var(--left-line);
  opacity: 1;
  position: absolute;
  transform: translateX(-50%);
  transition: opacity var(--fast2-duration) var(--standard-easing);
  visibility: visible;
}

body.taking.video .left-stripe {
  opacity: 0;
  transition: visibility 0ms 225ms, opacity 225ms var(--standard-easing);
  visibility: hidden;
}

.right-stripe {
  position: absolute;
  right:  var(--right-line);
  transform: translateX(50%);
}

.horizontal-center-stripe {
  left: 50%;
  position: absolute;
  transform: translateX(-50%);
}

.vertical-center-stripe {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.top-stripe.right-stripe {
  transform: translate(50%, -50%);
}

.top-stripe.left-stripe {
  transform: translate(-50%, -50%);
}

.top-stripe.horizontal-center-stripe {
  transform: translate(-50%, -50%);
}

.bottom-stripe.right-stripe {
  transform: translate(50%, 50%);
}

.bottom-stripe.left-stripe {
  transform: translate(-50%, 50%);
}

#shutters-group {
  --shutter-size: 60px;

  bottom: var(--shutter-vertical-center);
  display: flex;
  flex-direction: column;
  transform: translate(50%, 50%);
}

body.review-result #shutters-group {
  display: none;
}

body.should-handle-intent-result #shutters-group {
  bottom: calc((var(--bottom-line) * 2) + 8px + (var(--shutter-size) / 2));
}

body.tablet-landscape .actions-group {
  flex-direction: column-reverse;
}

#modes-group {
  --fade-padding: 16px;

  -webkit-mask-image: linear-gradient(to left,
    rgba(0, 0, 0, 0) 0,
    rgba(0, 0, 0, 1) var(--fade-padding) calc(100% - var(--fade-padding)),
    rgba(0, 0, 0, 0) 100%);
  display: block;
  left: calc(var(--left-line) * 2);
  overflow: auto;
  padding: 5px 0;
  pointer-events: auto;
  right: calc(var(--right-line) * 2);
  text-align: center;
  white-space: nowrap;
}

body:not(.streaming) #modes-group,
body.taking #modes-group,
body.taking:not(.video) #shutters-group {
  opacity: 0.38;
}

#modes-group::-webkit-scrollbar-thumb {
  background: gray;
  border-radius: 3px/50%;
  height: auto;
  width: auto;
}

#modes-group::-webkit-scrollbar {
  height: 5px;
  width: auto;
}

body.taking.video #gallery-enter,
body.taking.video #modes-group {
  display: none;
}

body.should-handle-intent-result #modes-group {
  display: none;
}

#play-result-video {
  background-image: url(/images/camera_intent_play_video.svg);
  height: 80px;
  width: 80px;
}

#confirm-result-groups {
  bottom: calc(var(--bottom-line) - 36px);
  display: flex;
  flex-direction: column;
}

#confirm-result-groups>button {
  flex: 0 0 76px;
  height: 72px;
  width: 72px;
}

body.review-result #switch-device,
body.review-result #preview-video,
body:not(.review-result) #confirm-result-groups,
body:not(.review-photo-result) #review-photo-result,
body:not(.review-video-result) #review-video-result,
body:not(.review-video-result) #play-result-video,
body.playing-result-video #play-result-video {
  display: none;
}

#confirm-result {
  background-image: url(/images/camera_intent_result_confirm.svg);
}

#cancel-result {
  background-image: url(/images/camera_intent_result_cancel.svg);
}
/* ... */

